[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdwan-recipes"
version = "0.1.0"
description = "Sample Python clients for Cisco Catalyst SD-WAN Manager (20.18) monitoring recipes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<0.29",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
